# sam_whistle

./: .gitignore  .gitmodules  README.md  checkpoints  config.py  dataset.py  plot.ipynb  plot.py  pyproject.toml
notebooks/: pseudo_lable.ipynb  spect.ipynb
sam_whistle/: config.py  dataset.py  main.py  model.py  train.py  utils.py  visualization.py
sam_whistle/datasets/: __init__.py  check_data.py  dataset.py  utils.py  whistle_coco.py
sam_whistle/evaluate/: eval_coco.py  eval_conf.py  eval_tonal.py  evaluate.py
sam_whistle/evaluate/graph_search/: __init__.py  extract_tonal.py  tonal_tracker.py  tonal_tracking.py
sam_whistle/evaluate/tonal_extraction/: __init__.py  graph_search.py  read_bin.py  tonal_tracker.py
sam_whistle/model/: __init__.py  fcn_encoder.py  fcn_spect.py  fpn.py  loss.py  model.py  sam.py  sam2.py
sam_whistle/utils/: __init__.py  anno.py  audio.py  eval.py  graph.py  peaks.py  prompt.py  tone.py  visualize.py  write_binary.py
scripts/: run.sh
segment_anything/: build_sam.py
segment_anything/modeling/: sam.py
tests/: extract_graph.py  meta.py  test_skeleton.py  test_tyro.py
