[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sam_whistle"
version = "0.2.0"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "matplotlib",
    "pycocotools",
    "opencv-python",
    "tyro",
    "tqdm",
]

[tool.setuptools]
packages = ["sam_whistle", "segment_anything"]
