[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-whistle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "scikit-image>=0.24.0",
    "shapely>=2.0.6",
    "sknw>=0.15",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
    "tyro>=0.9.2",
    "tensorboard>=2.18.0",
    "prettytable",
    "jpype",
]

[tool.setuptools.packages.find]
include = ["sam_whistle"]

